--- a/src/app/Components/nav-bar/nav-bar.component.css
+++ b/src/app/Components/nav-bar/nav-bar.component.css
@@ -40,8 +40,42 @@ h1{
 .logo{
   height: 30px;
   width: 30px;
-  margin-left: 8px;
+  margin-left: 3px;
   margin-top: 30px;
+}
+
+.btn-container{
+
+  padding-left: 10px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  width: 100%;
+  height: 80%;
+}
+
+button {
+  background-color: #393e46;
+  margin-top: 12px;
+  margin-right: 5px;
+  border: 1px solid #222831;
+}
+
+#buttonLog{
+  height: 42px;
+  width: 45%;
+  border-radius: 5px;
+  color: #fd7014;
+
+
+}
+#buttonReg{
+  height: 42px;
+  width: 45%;
+  border-radius: 5px;
+  color: #fd7014;
+
+
 }
 
 .desni{
