--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -18,8 +18,8 @@
   </div>
   <div class="desni">
     <div class="btn-container">
-      <button id="btn-login">Login</button>
-      <button id="btn-registracija">Registruj se</button>
+      <button id="buttonLog">Login</button>
+      <button id="buttonReg">Registracija</button>
     </div>
 
   </div>
