--- a/src/app/Components/izbornik/izbornik.component.html
+++ b/src/app/Components/izbornik/izbornik.component.html
@@ -1,3 +1,43 @@
 <div class="izbornik-container">
+<div class="izbornik-gornji">
+  <div class="container-lopte">
+
+    <div class="container-lopte-ikone"(click)="Kliknut1()"  [ngStyle]="{'border-color': isKliknut1===true ? '#fd7014': '#EEEEEE'}" >
+      <div class="container-slika-tekst" >
+        <img src="../../../assets/Slike/fudbal-ikona.png" alt="">
+        <p>Fudbal</p>
+      </div>
+
+    </div>
+    <div class="container-lopte-ikone" (click)="Kliknut2()"  [ngStyle]="{'border-color': isKliknut2===true ? '#fd7014': '#EEEEEE'}" >
+      <div class="container-slika-tekst" >
+        <img src="../../../assets/Slike/kosarka-ikona.png" alt="">
+        <p>Košarka</p>
+      </div>
+
+    </div>
+    <div class="container-lopte-ikone" (click)="Kliknut3()" [ngStyle]="{'border-color': isKliknut3===true ? '#fd7014': '#EEEEEE'}" >
+      <div class="container-slika-tekst">
+        <img src="../../../assets/Slike/tenis.png" alt="">
+        <p>Tenis</p>
+      </div>
+
+    </div>
+    <div class="container-lopte-ikone" (click)="Kliknut4()" [ngStyle]="{'border-color': isKliknut4===true ? '#fd7014': '#EEEEEE'}" >
+      <div class="container-slika-tekst">
+        <img src="../../../assets/Slike/odbojka.png" alt="">
+        <p>Odbojka</p>
+      </div>
+
+    </div>
+    <div class="container-lopte-ikone" (click)="Kliknut5()" [ngStyle]="{'border-color': isKliknut5===true ? '#fd7014': '#EEEEEE'}" >
+      <div class="container-slika-tekst">
+        <img src="../../../assets/Slike/boxing-glove.png" alt="">
+        <p>Boks</p>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 </div>
