--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+
 <app-nav-bar></app-nav-bar>
 <app-banners></app-banners>
 <app-izbornik></app-izbornik>
+<app-sports></app-sports>
 <app-footer></app-footer>
