--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
 body{
-  background-color: #222831;
+  background-color: #393e46;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+}
+html{
+  background-color: #393e46;
+}
+
+a{
+  text-decoration: none;
+  color: #222831;
+
 }
 /* You can add global styles to this file, and also import other style files */
