--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -15,7 +15,7 @@
        [ngStyle]="{'background-color': isKliknut3===true ? '#fd7014': '#EEEEEE'}">
     <a routerLink="/rezultati">
     <img src="../../../assets/Slike/stoperica.png" alt="">
-    <p>Rezultati</p>
+    <p>Uživo</p>
     </a>
   </div>
   <div class="button-container" (click)="Kliknut4()"
