Omogućeni login i registracija

--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -18,8 +18,8 @@
   </div>
   <div class="desni">
     <div class="btn-container">
-      <button id="buttonLog">Login</button>
-      <button id="buttonReg">Registracija</button>
+      <button class = "dugmici" id="buttonLog" routerLink="/login" routerLinkActive="active">Login</button>
+      <button class = "dugmici" id="buttonReg" routerLink="/registracija" routerLinkActive="active">Registracija</button>
     </div>
 
   </div>
