Dodana jackpot komponenta

--- a/src/app/Components/jackpot/jackpot.component.html
+++ b/src/app/Components/jackpot/jackpot.component.html
@@ -1,1 +1,72 @@
-<p>jackpot works!</p>
+<app-nav-bar></app-nav-bar>
+<app-banners></app-banners>
+<div class="jackpot-naslov">
+   <h2>Jackpot dobitnici</h2>
+</div>
+<div class="jackpot-tekst">
+  <h4>Željeli biste sudjelovati u dnevnoj nagradi Jackpot?</h4>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><h5>Kliknite ovdje i saznajte kako!</h5></a>
+</div>
+<table id="tabela">
+  <th>
+      Ime
+  </th>
+  <th>
+    Članski broj
+  </th>
+  <th>
+    Grad
+  </th>
+  <th>Iznos</th>
+  <tr>
+    <td>
+      Zejd Delić
+    </td>
+    <td>
+      123879
+    </td>
+    <td>Kozarac</td>
+    <td>69000 KM</td>
+  </tr>
+  <tr>
+    <td>
+      Almedin Magrdžija
+    </td>
+    <td>
+      225883
+    </td>
+    <td>Doboj - Kakanj</td>
+    <td>65000 KM</td>
+  </tr>
+  <tr>
+    <td>
+      Aleksa Aćimović
+    </td>
+    <td>
+      225883
+    </td>
+    <td>Trebinje</td>
+    <td>60000 KM</td>
+  </tr>
+  <tr>
+    <td>
+      Edin Gondžo
+    </td>
+    <td>
+      918201
+    </td>
+    <td>Vareš</td>
+    <td>55000 KM</td>
+  </tr>
+  <tr>
+    <td>
+      Azur Delibašić
+    </td>
+    <td>
+      225885
+    </td>
+    <td>Kakanj</td>
+    <td>50000 KM</td>
+  </tr>
+</table>
+<app-footer></app-footer>
