--- a/src/app/Components/tiket/tiket.component.css
+++ b/src/app/Components/tiket/tiket.component.css
@@ -8,6 +8,18 @@
   box-sizing: border-box;
 
 }
+
+
+.img-delete{
+  height:24px;
+  width: 24px;
+  color: #222831;
+}
+
+.button.swal2-styled.swal2-confirm{
+  background-color: #fd7014;
+}
+
 .prazan-tiket-container{
   position: absolute;
   width: 90%;
@@ -174,11 +186,14 @@ h5{
   font-weight: bold;
 }
 
+swal-button{
+  background-color: #fd7014;
+}
 .obrisi-tiket{
   position: absolute;
   margin-top: 100px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-left: 35%;
   width: 30%;
   background-color: #fd7014;
@@ -186,4 +201,5 @@ h5{
   font-family: 'Roboto';
   border-radius: 10px;
   margin-bottom: 20px;
+  height: 30px;
 }
