--- a/src/styles.css
+++ b/src/styles.css
@@ -14,4 +14,8 @@ a{
   color: #222831;
 
 }
+
+.swal-button{
+  background-color: #fd7014;
+}
 /* You can add global styles to this file, and also import other style files */
